# audiowave

./: .gitignore  .vampus.yml  Cargo.toml  LICENSE  README.md  audiowave.sh
assets/: default_config.yml
src/: cli.rs  main.rs
src/models/: background.rs  config.rs  metadata.rs  mod.rs  style.rs  template.rs  text.rs  video.rs  waveform.rs
tests/: cli.rs
waveforms/: generate_waveforms.sh
