[package]
name = "audiowave"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
id3 = "1.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
